fixed stretched profile photo on posts/comments, and fixed comment bubbles on viewmodel

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -15,7 +15,7 @@
   position: relative;
 }
 
-.comment-item img, .comment-field img{
+.comment-field img{
   border-radius: 50%;
   height: 32px;
   width: 32px;
