--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -15,6 +15,10 @@
   cursor: pointer;
 }
 
+.info-container .comment-body-container {
+  max-width: 200px;
+}
+
 .modal-background {
   position: fixed;
   top: 0;
